force-app/main/default/objects/Player_Season_Stats__c/Player_Season_Stats__c.object-meta.xml
<CustomObject>
    <description>Aggregated player performance per season/competition</description>
    <label>Player Season Stats</label>
    <nameField>
        <label>Player Season Stats Name</label>
        <type>AutoNumber</type>
        <displayFormat>PSS-{000000}</displayFormat>
    </nameField>
    <pluralLabel>Player Season Stats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>