force-app/main/default/objects/Player_Season_Stats__c/fields/AFL_Behinds__c.field-meta.xml
<CustomField>
    <fullName>AFL_Behinds__c</fullName>
    <label>AFL Behinds</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>AFL: Behinds kicked (1 point each)</description>
</CustomField>