force-app/main/default/objects/Player_Season_Stats__c/fields/AFL_Goals__c.field-meta.xml
<CustomField>
    <fullName>AFL_Goals__c</fullName>
    <label>AFL Goals</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>AFL: Goals kicked (6 points each)</description>
</CustomField>