force-app/main/default/objects/Player_Season_Stats__c/fields/Appearances__c.field-meta.xml
<CustomField>
    <fullName>Appearances__c</fullName>
    <label>Appearances</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total matches played</description>
</CustomField>