force-app/main/default/objects/Player_Season_Stats__c/fields/Assists__c.field-meta.xml
<CustomField>
    <fullName>Assists__c</fullName>
    <label>Assists</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Assists provided</description>
</CustomField>