force-app/main/default/objects/Player_Season_Stats__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <label>Average Rating</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
    <description>Average performance rating (1-10)</description>
</CustomField>