force-app/main/default/objects/Player_Season_Stats__c/fields/Batting_Average__c.field-meta.xml
<CustomField>
    <fullName>Batting_Average__c</fullName>
    <label>Batting Average</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Cricket: Runs per dismissal</description>
</CustomField>