force-app/main/default/objects/Player_Season_Stats__c/fields/Bowling_Average__c.field-meta.xml
<CustomField>
    <fullName>Bowling_Average__c</fullName>
    <label>Bowling Average</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Cricket: Runs conceded per wicket</description>
</CustomField>