force-app/main/default/objects/Player_Season_Stats__c/fields/Carries__c.field-meta.xml
<CustomField>
    <fullName>Carries__c</fullName>
    <label>Carries</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Ball carries</description>
</CustomField>