force-app/main/default/objects/Player_Season_Stats__c/fields/Catches__c.field-meta.xml
<CustomField>
    <fullName>Catches__c</fullName>
    <label>Catches</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Cricket: Catches taken</description>
</CustomField>