force-app/main/default/objects/Player_Season_Stats__c/fields/Centuries__c.field-meta.xml
<CustomField>
    <fullName>Centuries__c</fullName>
    <label>Centuries</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Cricket: 100+ run innings</description>
</CustomField>