force-app/main/default/objects/Player_Season_Stats__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <type>Lookup</type>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Player Season Stats</relationshipLabel>
    <relationshipName>Player_Season_Stats</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>