force-app/main/default/objects/Player_Season_Stats__c/fields/Conversions__c.field-meta.xml
<CustomField>
    <fullName>Conversions__c</fullName>
    <label>Conversions</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Conversions kicked</description>
</CustomField>