force-app/main/default/objects/Player_Season_Stats__c/fields/Disposals__c.field-meta.xml
<CustomField>
    <fullName>Disposals__c</fullName>
    <label>Disposals</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>AFL: Total disposals (kicks + handballs)</description>
</CustomField>