force-app/main/default/objects/Player_Season_Stats__c/fields/Dribbles_Successful__c.field-meta.xml
<CustomField>
    <fullName>Dribbles_Successful__c</fullName>
    <label>Dribbles Successful</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Successful dribbles</description>
</CustomField>