force-app/main/default/objects/Player_Season_Stats__c/fields/Economy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Economy_Rate__c</fullName>
    <label>Economy Rate</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Cricket: Runs conceded per over</description>
</CustomField>