force-app/main/default/objects/Player_Season_Stats__c/fields/Half_Centuries__c.field-meta.xml
<CustomField>
    <fullName>Half_Centuries__c</fullName>
    <label>Half Centuries</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Cricket: 50-99 run innings</description>
</CustomField>