force-app/main/default/objects/Player_Season_Stats__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
    <description>Last time stats were recalculated</description>
</CustomField>