force-app/main/default/objects/Player_Season_Stats__c/fields/Man_of_Match_Awards__c.field-meta.xml
<CustomField>
    <fullName>Man_of_Match_Awards__c</fullName>
    <label>Man of Match Awards</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>MOTM count</description>
</CustomField>