force-app/main/default/objects/Player_Season_Stats__c/fields/Marks__c.field-meta.xml
<CustomField>
    <fullName>Marks__c</fullName>
    <label>Marks</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>AFL: Marks taken</description>
</CustomField>