force-app/main/default/objects/Player_Season_Stats__c/fields/Meters_Gained__c.field-meta.xml
<CustomField>
    <fullName>Meters_Gained__c</fullName>
    <label>Meters Gained</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Meters gained with ball</description>
</CustomField>