force-app/main/default/objects/Player_Season_Stats__c/fields/Minutes_Played__c.field-meta.xml
<CustomField>
    <fullName>Minutes_Played__c</fullName>
    <label>Minutes Played</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Total minutes on field</description>
</CustomField>