force-app/main/default/objects/Player_Season_Stats__c/fields/Pass_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Pass_Accuracy__c</fullName>
    <label>Pass Accuracy</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Soccer: Pass completion percentage</description>
</CustomField>