force-app/main/default/objects/Player_Season_Stats__c/fields/Penalty_Goals__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Goals__c</fullName>
    <label>Penalty Goals</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Penalty goals kicked</description>
</CustomField>