force-app/main/default/objects/Player_Season_Stats__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Calendar season for these stats</description>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Player Season Stats</relationshipLabel>
    <relationshipName>Player_Season_Stats</relationshipName>
    <type>Lookup</type>
</CustomField>