force-app/main/default/objects/Player_Season_Stats__c/fields/Shots_On_Target__c.field-meta.xml
<CustomField>
    <fullName>Shots_On_Target__c</fullName>
    <label>Shots On Target</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Shots on target</description>
</CustomField>