force-app/main/default/objects/Player_Season_Stats__c/fields/Shots_Total__c.field-meta.xml
<CustomField>
    <fullName>Shots_Total__c</fullName>
    <label>Shots Total</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Total shots taken</description>
</CustomField>