force-app/main/default/objects/Player_Season_Stats__c/fields/Starts__c.field-meta.xml
<CustomField>
    <fullName>Starts__c</fullName>
    <label>Starts</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Games started in first team</description>
</CustomField>