force-app/main/default/objects/Player_Season_Stats__c/fields/Strike_Rate__c.field-meta.xml
<CustomField>
    <fullName>Strike_Rate__c</fullName>
    <label>Strike Rate</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
    <description>Cricket: Runs per 100 balls</description>
</CustomField>