force-app/main/default/objects/Player_Season_Stats__c/fields/Substitute_Appearances__c.field-meta.xml
<CustomField>
    <fullName>Substitute_Appearances__c</fullName>
    <label>Substitute Appearances</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Games entered as substitute</description>
</CustomField>