force-app/main/default/objects/Player_Season_Stats__c/fields/Tackles_Made__c.field-meta.xml
<CustomField>
    <fullName>Tackles_Made__c</fullName>
    <label>Tackles Made</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Total tackles made</description>
</CustomField>