force-app/main/default/objects/Player_Season_Stats__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Player Season Stats</relationshipLabel>
    <relationshipName>Player_Season_Stats</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>