force-app/main/default/objects/Player_Season_Stats__c/fields/Tries__c.field-meta.xml
<CustomField>
    <fullName>Tries__c</fullName>
    <label>Tries</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Rugby: Tries scored</description>
</CustomField>