force-app/main/default/objects/Player_Season_Stats__c/fields/Yellow_Cards__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Cards__c</fullName>
    <label>Yellow Cards</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Soccer: Yellow cards received</description>
</CustomField>